javascript/jshint/test/data/highlighting/dist/client/client.js
<error descr="JSHint: 'a' is not defined. (W117)">a</error> = 1;